force-app/main/default/objects/PresaleApartment__c/PresaleApartment__c.object-meta.xml
<CustomObject>
    <label>PresaleTeilobjekt</label>
    <nameField>
        <label>PresaleApartment-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PresaleTeilobjekte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>