force-app/main/default/objects/PresaleApartment__c/fields/Fl_che__c.field-meta.xml
<CustomField>
    <fullName>Fl_che__c</fullName>
    <inlineHelpText>Format: 49,53
Die &quot;m²&quot; werden im Maklerportal automatisch hinzugefügt.</inlineHelpText>
    <label>Fläche</label>
    <length>255</length>
    <type>Text</type>
</CustomField>