force-app/main/default/objects/PresaleApartment__c/fields/Kaufpreis__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis__c</fullName>
    <inlineHelpText>Format: 171.898,00
Das Euro-Zeichen wird im Maklerportal automatisch hinzugefügt.</inlineHelpText>
    <label>Kaufpreis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>