force-app/main/default/objects/PresaleApartment__c/fields/Miete_per_annum__c.field-meta.xml
<CustomField>
    <fullName>Miete_per_annum__c</fullName>
    <inlineHelpText>Format: 7.764,66
Das Euro-Zeichen wird im Maklerportal automatisch hinzugefügt.</inlineHelpText>
    <label>Miete per annum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>