force-app/main/default/objects/PresaleApartment__c/fields/Preis_pro_qm__c.field-meta.xml
<CustomField>
    <fullName>Preis_pro_qm__c</fullName>
    <inlineHelpText>Format: 3.470,58
Das Euro-Zeichen wird im Maklerportal automatisch hinzugefügt.</inlineHelpText>
    <label>Preis pro qm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>