force-app/main/default/objects/PresaleApartment__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Presale-Teilobjekte</relationshipLabel>
    <relationshipName>PresaleTeilobjekte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>